--- a/trend_link/apps/user/templates/user/singup.html
+++ b/trend_link/apps/user/templates/user/singup.html
@@ -20,6 +20,7 @@
                     {{ form.as_p }}
                     <button type="submit">Sign Up</button>
                 </form>
+                <p>Already have an account? <a href="{% url 'login' %}">Login here</a></p>
             </div>
         </div>
     </div>
