--- a/trend_link/apps/user/templates/user/home.html
+++ b/trend_link/apps/user/templates/user/home.html
@@ -6,5 +6,15 @@
 </head>
 <body>
     <h2>Welcome</h2>
+    {% if user.is_authenticated %}
+        <a href="{% url 'profile' %}">
+            <button>View Profile</button>
+        </a>
+        <form method="post" action="{% url 'logout' %}">
+            {% csrf_token %}
+            <button type="submit">Logout</button>
+        </form>
+
+    {% endif %}
 </body>
 </html>
