user.home.html: Added a Who can I know? button

--- a/trend_link/apps/user/templates/user/home.html
+++ b/trend_link/apps/user/templates/user/home.html
@@ -7,13 +7,16 @@
 <body>
     <h2>Welcome</h2>
     {% if user.is_authenticated %}
-        <a href="{% url 'profile' %}">
+        <a href="{% url 'profile'  user.id %}">
             <button>View Profile</button>
         </a>
         <form method="post" action="{% url 'logout' %}">
             {% csrf_token %}
             <button type="submit">Logout</button>
         </form>
+        <a href="{% url 'members' %}">
+            <button>Who can I know?</button>
+        </a>
 
     {% endif %}
 </body>
