--- a/trend_link/apps/user/templates/user/members.html
+++ b/trend_link/apps/user/templates/user/members.html
@@ -10,7 +10,7 @@
     <div class="profiles-container">
         <h1>User Profiles</h1>
         <div class="profiles-list">
-            {% for profile in members %}
+            {% for profile in object_list %}
                 <div class="profile-card">
                     <div class="profile-picture">
                         <img src="{{ profile.profile_picture.url }}" alt="{{ profile.user.username }}'s profile picture">
@@ -22,6 +22,23 @@
                     </div>
                 </div>
             {% endfor %}
+        </div>
+        <div class="pagination">
+                <div class="step-links">
+                    {% if page_obj.has_previous %}
+                        <a href="?page=1">&laquo; first</a>
+                        <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+                    {% endif %}
+
+                    <span class="current">
+                        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                    </span>
+
+                    {% if page_obj.has_next %}
+                        <a href="?page={{ page_obj.next_page_number }}">next</a>
+                        <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                    {% endif %}
+                </div>
         </div>
     </div>
 </body>
