--- a/trend_link/apps/user/templates/user/members.html
+++ b/trend_link/apps/user/templates/user/members.html
@@ -4,42 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <title>User Profiles</title>
-    <link rel="stylesheet" href="{% static 'user/members.css' %}">
+    <link rel="stylesheet" href="{% static 'user/css/members.css' %}">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="{% static 'user/js/members.js' %}"></script>
 </head>
 <body>
     <div class="profiles-container">
         <h1>User Profiles</h1>
-        <div class="profiles-list">
-            {% for profile in object_list %}
-                <div class="profile-card">
-                    <div class="profile-picture">
-                        <img src="{{ profile.profile_picture.url }}" alt="{{ profile.user.username }}'s profile picture">
-                    </div>
-                    <div class="profile-details">
-                        <p><strong>Username:</strong> {{ profile.user.username }}</p>
-                        <p><strong>Email:</strong> {{ profile.user.email }}</p>
-                        <a href="{% url 'profile' profile.user.id %}">View Profile</a>
-                    </div>
-                </div>
-            {% endfor %}
-        </div>
-        <div class="pagination">
-                <div class="step-links">
-                    {% if page_obj.has_previous %}
-                        <a href="?page=1">&laquo; first</a>
-                        <a href="?page={{ page_obj.previous_page_number }}">previous</a>
-                    {% endif %}
-
-                    <span class="current">
-                        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-                    </span>
-
-                    {% if page_obj.has_next %}
-                        <a href="?page={{ page_obj.next_page_number }}">next</a>
-                        <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
-                    {% endif %}
-                </div>
+        <div class="profiles-list" id="profiles-list">
         </div>
     </div>
+    <div id="members-url" data-url="{% url 'members-api' %}" style="display:none;"></div>
+    <div id="profile-details" data-url="{% url 'profile' 0 %}" style="display:none;"></div>
 </body>
 </html>
