--- a/trend_link/apps/post/templates/post/post.html
+++ b/trend_link/apps/post/templates/post/post.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Post</title>
-    <link rel="stylesheet" href="{% static 'post/post.css' %}">
+    <link rel="stylesheet" href="{% static 'post/css/post.css' %}">
 </head>
 <body>
     <div class="form-container">
