--- a/trend_link/apps/user/templates/user/signup.html
+++ b/trend_link/apps/user/templates/user/signup.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="{% static 'user/css/singup.css' %}">
+    <link rel="stylesheet" href="{% static 'user/css/signup.css' %}">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="{% static 'user/js/signup.js' %}"></script>
 </head>
