--- a/trend_link/apps/user/templates/user/profile.html
+++ b/trend_link/apps/user/templates/user/profile.html
@@ -9,6 +9,7 @@
     <script src="{% static 'user/js/profile.js' %}"></script>
 </head>
 <body>
+    <a href="{% url 'home' %}" class="home-link">Home</a>
     <div class="profile-container">
         <h1 id="username"></h1>
         <div class="profile-picture">
@@ -40,7 +41,9 @@
         </form>
     </div>
     <div id="current-user-id" data-id="{{ user.id }}" style="display:none;"></div>
-    <div id="retrieve-url" data-url="{% url 'profile-retrieve-api' 0 %}" style="display:none;"></div>
+    <div id="retrieve-url-api" data-url="{% url 'profile-retrieve-api' 0 %}" style="display:none;"></div>
+    <div id="retrieve-url" data-url="{% url 'profile' 0 %}" style="display:none;"></div>
     <div id="update-url" data-url="{% url 'profile-update-api' 0 %}" style="display:none;"></div>
+    <div id="login-url" data-url="{% url 'login' %}" style="display:none;"></div>
 </body>
 </html>
