post.home.css: Style like button

--- a/trend_link/apps/post/static/post/css/home.css
+++ b/trend_link/apps/post/static/post/css/home.css
@@ -250,3 +250,8 @@ body {
 .post-card .profile-picture a:hover {
     text-decoration: none;
 }
+
+.liked {
+    background-color: #28a745;
+    color: white;
+}
