post.post.html: Fixed fileinput name

--- a/trend_link/apps/post/templates/post/post.html
+++ b/trend_link/apps/post/templates/post/post.html
@@ -20,7 +20,7 @@
             </div>
             <div>
                 <label for="fileInput">Image:</label>
-                <input type="file" id="fileInput" name="profile_picture">
+                <input type="file" id="fileInput" name="image">
             </div>
             <input type="submit" value="Post">
         </form>
