post.home.html: added urls for js

--- a/trend_link/apps/post/templates/post/home.html
+++ b/trend_link/apps/post/templates/post/home.html
@@ -34,7 +34,8 @@
     <div id="delete-comment-url-api" data-url="{% url 'delete-comment-api' 0 %}" style="display:none;"></div>
     <div id="update-comment-url-api" data-url="{% url 'update-comment-api' 0 %}" style="display:none;"></div>
     <div id="profile-url" data-url="{% url 'profile' 0 %}" style="display:none;"></div>
-    <div id="create-like-url-api" data-url="{% url 'create-like-api' %}" style="display:none;"></div>
+    <div id="like-post-url-api" data-url="{% url 'like-post-api' %}" style="display:none;"></div>
+    <div id="unlike-post-url-api" data-url="{% url 'unlike-post-api' 0 %}" style="display:none;"></div>
     
 </body>
 </html>
