post.home.html: Added url for update and delete post

--- a/trend_link/apps/post/templates/post/home.html
+++ b/trend_link/apps/post/templates/post/home.html
@@ -30,6 +30,8 @@
     </div>
     <div id="current-user" data-user="{{ user }}" style="display:none;"></div>
     <div id="posts-url" data-url="{% url 'list-post-api' %}" style="display:none;"></div>
+    <div id="update-post-url-api" data-url="{% url 'update-post-api' 0 %}" style="display:none;"></div>
+     <div id="delete-post-url-api" data-url="{% url 'delete-post-api' 0 %}" style="display:none;"></div>
     <div id="create-comment-url-api" data-url="{% url 'create-comment-api' %}" style="display:none;"></div>
     <div id="delete-comment-url-api" data-url="{% url 'delete-comment-api' 0 %}" style="display:none;"></div>
     <div id="update-comment-url-api" data-url="{% url 'update-comment-api' 0 %}" style="display:none;"></div>
