--- a/trend_link/apps/user/templates/user/profile.html
+++ b/trend_link/apps/user/templates/user/profile.html
@@ -21,6 +21,7 @@
             <p><strong>Bio:</strong> <span id="user-bio"></span></p>
             <p><strong>Birth Date:</strong> <span id="user-birth-date"></span></p>
             <button type="button" id="edit-button" style="display:none;" onclick="toggleEditForm()">Edit</button>
+            <button type="button" id="connect-button" style="display:none;">Connect</button>
         </div>
         <form id="uploadForm" method="post" enctype="multipart/form-data" style="display:none;">
             {% csrf_token %}
@@ -41,6 +42,7 @@
         </form>
     </div>
     <div id="current-user-id" data-id="{{ user.id }}" style="display:none;"></div>
+    <div id="connect-url" data-url="{% url 'send-connectionreq-api' %}" style="display:none;"></div>
     <div id="retrieve-url-api" data-url="{% url 'profile-retrieve-api' 0 %}" style="display:none;"></div>
     <div id="retrieve-url" data-url="{% url 'profile' 0 %}" style="display:none;"></div>
     <div id="update-url" data-url="{% url 'profile-update-api' 0 %}" style="display:none;"></div>
