post.user.html: List connection requests buttom

--- a/trend_link/apps/post/templates/post/home.html
+++ b/trend_link/apps/post/templates/post/home.html
@@ -20,6 +20,7 @@
                 </form>
                 <a href="{% url 'members' %}">Who can I know?</a>
                 <a href="{% url 'create-post' %}">Create Post</a>
+                <a href="{% url 'list-connectionreq' %}">Connection Requests</a>
             {% endif %}
         </div>
         <div class="content">
