--- a/trend_link/trend_link/global_static/css/home.css
+++ b/trend_link/trend_link/global_static/css/home.css
@@ -2,64 +2,32 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f0f2f5;
     margin: 0;
-    padding: 20px;
+    padding: 0;
     display: flex;
-    justify-content: center;
-    align-items: flex-start;
+    flex-direction: column;
+    align-items: center;
     min-height: 100vh;
 }
 
+.container {
+    padding: 20px;
+    width: 100%;
+    max-width: 1200px;
+}
+
 .home-container {
-    width: 80%;
+    width: 100%;
     max-width: 1200px;
     background-color: #fff;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     display: flex;
     padding: 20px;
-}
-
-.sidebar {
-    width: 20%;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-right: 20px;
-}
-
-.sidebar h2 {
-    text-align: left;
-}
-
-.sidebar a, .sidebar form {
-    display: block;
-    width: 100%;
-    margin: 10px 0;
-}
-
-.sidebar a, .sidebar form button {
-    display: block;
-    width: 100%;
-    margin: 10px 0;
-    text-decoration: none;
-    font-size: 16px;
-    color: #fff;
-    background-color: #007bff;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-    text-align: center;
-    cursor: pointer;
-    box-sizing: border-box;
-}
-
-.sidebar a:hover, .sidebar button:hover {
-    background-color: #0056b3;
+    margin-top: 20px;
 }
 
 .content {
-    width: 75%;
+    width: 100%;
 }
 
 .post-list {
