--- a/trend_link/apps/post/templates/post/post.html
+++ b/trend_link/apps/post/templates/post/post.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Post</title>
-    <link rel="stylesheet" href="{% static 'post/css/post.css' %}">
+    <link rel="stylesheet" href="{% static 'post/css/create-post.css' %}">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="{% static 'post/js/post.js' %}"></script>
 </head>
