--- a/trend_link/trend_link/templates/base.html
+++ b/trend_link/trend_link/templates/base.html
@@ -6,24 +6,38 @@
     <title>{% block title %}{% endblock %}</title>
     {% block extra_head %}{% endblock %}
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <nav class="navbar">
-        <a href="{% url 'home' %}">Home</a>
-        {% if user.is_authenticated %}
-            <a href="{% url 'profile' user.id %}">Profile</a>
-            <a href="{% url 'members' %}">Members</a>
-            <a href="{% url 'create-post' %}">Create Post</a>
-            <a href="{% url 'list-connectionreq' %}">Connection Requests</a>
-            <form method="post" action="{% url 'logout' %}" style="display: inline;">
-                {% csrf_token %}
-                <button type="submit">Logout</button>
-            </form>
-        {% else %}
-            <a href="{% url 'login' %}">Login</a>
-            <a href="{% url 'signup' %}">Sign Up</a>
-        {% endif %}
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="{% url 'home' %}">Home</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto" style="color: #800080;">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'profile' user.id %}">Profile</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'members' %}">Members</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'create-post' %}">Create Post</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'list-connectionreq' %}">Connection Requests</a>
+                    </li>
+                    <li class="nav-item">
+                        <form class="form-inline" method="post" action="{% url 'logout' %}">
+                            {% csrf_token %}
+                            <button class="btn btn-link nav-link" type="submit">Logout</button>
+                        </form>
+                    </li>
+            </ul>
+        </div>
     </nav>
     <div class="container">
         {% block content %}
