--- a/trend_link/apps/user/static/user/css/signup.css
+++ b/trend_link/apps/user/static/user/css/signup.css
@@ -70,7 +70,7 @@ body {
     padding: 10px;
     border: none;
     border-radius: 5px;
-    background-color: #007bff;
+    background-color: purple;
     color: #fff;
     font-size: 16px;
     cursor: pointer;
@@ -78,7 +78,7 @@ body {
 }
 
 .signup-form-container form button:hover {
-    background-color: #0056b3;
+    background-color: rgb(84, 2, 84);
 }
 
 .left h1 {
