--- a/trend_link/apps/post/static/post/css/post.css
+++ b/trend_link/apps/post/static/post/css/post.css
@@ -1,13 +1,3 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f2f5;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
-}
-
 .form-container {
     display: flex;
     flex-direction: column;
@@ -19,6 +9,8 @@ body {
     border-radius: 10px;
     padding: 40px;
     text-align: center;
+    justify-content: center;
+    margin: auto;
 }
 
 .form-container h1 {
