--- a/trend_link/apps/user/static/user/css/members.css
+++ b/trend_link/apps/user/static/user/css/members.css
@@ -1,14 +1,3 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f2f5;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: 100vh;
-}
-
 .profiles-container {
     width: 80%;
     max-width: 1200px;
@@ -17,17 +6,13 @@ body {
     border-radius: 10px;
     padding: 20px;
     text-align: center;
-}
-
-h1 {
-    font-size: 24px;
-    margin-bottom: 20px;
+    margin: auto;
 }
 
 .profiles-list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .profile-card {
@@ -66,7 +51,7 @@ h1 {
     display: inline-block;
     margin-top: 10px;
     padding: 10px 20px;
-    background-color: #007bff;
+    background-color: purple;
     color: #fff;
     text-decoration: none;
     border-radius: 5px;
@@ -75,7 +60,7 @@ h1 {
 }
 
 .profile-card .profile-details a:hover {
-    background-color: #0056b3;
+    background-color: rgb(84, 2, 84);
 }
 
 .pagination {
