--- a/trend_link/apps/user/static/user/css/profile.css
+++ b/trend_link/apps/user/static/user/css/profile.css
@@ -1,45 +1,21 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f2f5;
-    margin: 0;
+.main-content {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-    height: 100vh;
-    position: relative;
-}
-
-.home-link {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    padding: 10px 15px;
-    border-radius: 5px;
-    background-color: #007bff;
-    color: #fff;
-    text-decoration: none;
-}
-
-.home-link:hover {
-    background-color: #0056b3;
 }
 
 .profile-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 80%;
+    width: 50%;
     max-width: 600px;
     background-color: #fff;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     padding: 40px;
     text-align: center;
-}
-
-.profile-container h1 {
-    font-size: 24px;
-    margin-bottom: 20px;
+    margin: auto;
 }
 
 .profile-picture img {
@@ -66,15 +42,15 @@ body {
 a, .profile-container button {
     padding: 10px 15px;
     border-radius: 5px;
-    background-color: #007bff;
+    background-color: purple;
     color: #fff;
     text-decoration: none;
     border: none;
     cursor: pointer;
 }
 
-a:hover, .profile-container button:hover {
-    background-color: #0056b3;
+.profile-container button:hover {
+    background-color:  rgb(84, 2, 84);;
 }
 
 form {
@@ -91,16 +67,12 @@ form button {
     padding: 10px;
     border: none;
     border-radius: 5px;
-    background-color: #007bff;
     color: #fff;
     font-size: 16px;
     cursor: pointer;
     margin-top: 10px;
 }
 
-form button:hover {
-    background-color: #0056b3;
-}
 
 #updateForm {
     display: none;
