--- a/trend_link/trend_link/global_static/css/base.css
+++ b/trend_link/trend_link/global_static/css/base.css
@@ -14,3 +14,17 @@ body {
     width: 100%;
     z-index: 1000;
 }
+
+.notification {
+    background-color: #333;
+    color: #fff;
+    padding: 15px;
+    margin-top: 10px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    transition: opacity 0.5s ease-in-out;
+}
+
+.notification.fade-out {
+    opacity: 0;
+}
