--- a/trend_link/trend_link/templates/home.html
+++ b/trend_link/trend_link/templates/home.html
@@ -5,7 +5,7 @@
 {% block extra_head %}
 <link rel="stylesheet" href="{% static 'css/home.css' %}">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="{% static 'post/js/fetch-posts.js' %}"
+<script src="{% static 'post/js/posts.js' %}"
 defer
 data-current-user="{{ user }}"
 data-profile-url="{% url 'profile' 0 %}"
@@ -19,6 +19,7 @@ data-profile-url="{% url 'profile' 0 %}"
 data-delete-comment-url="{% url 'delete-comment-api' 0 %}"
 data-update-comment-url="{% url 'update-comment-api' 0 %}"
 data-create-comment-url="{% url 'create-comment-api' %}"
+data-current-user="{{ user.id }}"
 >
 </script>
 <script src="{% static 'post/js/like.js' %}"
